--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <title>My First Webpage, with Javascript</title>
   </head>
   <body>
+    <script>
+      function myButtonClicked()
+    </script>
     <h1>Hello, World! (with JS)</h1>
+    <br>
+    <button>Click me :]</button>
+    <br>
   </body>
 </html>
