edited index2.html and style2.css

--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="My First Webpage, with Javascript">
+    <meta name="description" content="My Second Webpage, with Javascript">
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Infinity de Guzman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,26 +12,23 @@
     <link rel="icon" type="image/ico" sizes="16x16" href="./favicons/sunset-16x16.ico">
     <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
-    <title>My First Webpage, with Javascript</title>
+    <title>My Second Webpage, with Javascript</title>
   </head>
   <body>
     <script>
-      function myButtonClicked() {
-        alert("Hello, World!")
+      function myButtonClicked3() {
+        alert("Please copy and paste this link in a different tab: https://tinyurl.com/h3llo-w0rld")
       }
-      function myButtonClicked2() {
-        alert("Bye, World!")
+      function myButtonClicked4() {
+        alert("You just got rick-rolled :)")
       }
     </script>
-    <h1>Hello, World! (with JS)</h1>
+    <h1>Hello, World! (with JS) pt. 2</h1>
     <br>
-    <button onclick="myButtonClicked()">Click me :]</button>
+    <button onclick="myButtonClicked3()">Click me :]</button>
     <br>
     <br>
-    <button onclick="myButtonClicked2()">Click me next :D</button>
+    <button onclick="myButtonClicked4()">Click me next :D</button>
     <br>
-    <p>
-      <a href="./index2.html">My Second page with JS</a>
-    </p>
   </body>
 </html>
