--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/ico" sizes="32x32" href="./favicons/sunset-32x32.ico">
     <link rel="icon" type="image/ico" sizes="16x16" href="./favicons/sunset-16x16.ico">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style2.css">
     <title>My Second Webpage, with Javascript</title>
   </head>
   <body>
